--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,17 @@
+// apply plugin: 'com.android.application'
+// apply plugin: 'kotlin-android'  // Make sure this line is present
+
+
 buildscript {
-    ext.kotlin_version = '1.7.10'
+    ext.kotlin_version = '1.9.22'
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:4.1.0' // Update this version
+        // classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
